syntax = "proto3";

option java_multiple_files = true;

package com.grpc.area;

message Area{
    int32 id=1;

    int32 level_code=2;

    string parent_code=3;

    string area_code=4;

    string zip_code=5;

    string city_code=6;

    string name=7;

    string short_name=8;

    string merger_name=9;

    string pinyin=10;

    float lng=12;

    float lat=13;

    string remark=14;

    int32 create_time=15;

    int32 create_user=16;

    int32 update_time=17;

    int32 update_user=18;
}

message AreaRequest{
    int32 id=1;

    int32 level_code=2;

    string parent_code=3;

    string area_code=4;

    repeated Area area=5;

    string name=8;

    string short_name=9;

    string pinyin=11;

    float lng=12;

    float lat=13;

    string remark=14;

    int32 create_time=15;

    int32 create_user=16;

    int32 update_time=17;

    int32 update_user=18;
}

message AreaResponse{
    int32 id=1;

    int32 level_code=2;

    string parent_code=3;

    string area_code=4;

    repeated Area area=5;

    string zip_code=6;

    string city_code=7;

    string name=8;

    string short_name=9;

    string merger_name=10;

    string pinyin=11;

    float lng=12;

    float lat=13;

    string remark=14;

    int32 create_time=15;

    int32 create_user=16;

    int32 update_time=17;

    int32 update_user=18;

}

service AreaService{
    rpc listArea(AreaRequest) returns (AreaResponse);
    rpc addArea(AreaRequest) returns (AreaResponse);
    rpc modifyArea(AreaRequest) returns (AreaResponse);
    rpc getAreaTree(AreaRequest) returns (AreaResponse);
    rpc getArea(AreaRequest) returns (AreaResponse);
}